--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -1,19 +1,9 @@
-#
 FROM python:3.10.4
 
-#
 WORKDIR /monitoring
 
-#
-COPY ./ ./
-
-#
-ENV VIRTUAL_ENV=./monitoring-venv
-RUN python3 -m venv $VIRTUAL_ENV
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-
-#
+COPY . ./
 RUN pip install --no-cache-dir -r ./requirements.txt
 
-#
+EXPOSE 80
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
